<?xml version="1.0" encoding="utf-8"?>

<!-- This is the Layout for the FileIO Activity-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/file_background">
    >
    
<LinearLayout 
android:id="@+id/FileLayoutTitle"
android:layout_width="fill_parent" 
android:layout_height="wrap_content"
android:paddingTop="10dip"
android:paddingBottom="10dip"
android:background="@color/file_menu"> 
  
<ImageView android:id="@+id/iview_file_Title" 
		   android:layout_toLeftOf="@+id/tv_Filemanager" 
		   android:layout_width="wrap_content" 
		   android:layout_height="wrap_content"
		   android:background="@drawable/pda_edit">
</ImageView>
 
<TextView android:id="@+id/tv_Filemanager" 
		  android:text="@string/file_title"
		  android:textColor="@android:color/black"
		  android:layout_toRightOf="@+id/ImageView01"
		  android:layout_marginLeft="15dip"
		  android:textSize="25px"
		  android:layout_marginTop="7dip"
		  android:layout_width="wrap_content" 
		  android:layout_height="wrap_content">
</TextView>
		
</LinearLayout>

<Button android:text="@string/file_new" 
		android:id="@+id/btn_file_New"
        android:layout_centerInParent="true"
        android:layout_above="@+id/btn_file_Load"
		android:layout_width="250px" 
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dip">
</Button>

<Button android:id="@+id/btn_file_Load" 
		android:text="@string/load" 
		android:layout_centerInParent="true"
		android:layout_width="250px" 
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dip">
</Button>

<Button android:id="@+id/btn_file_Save" 
		android:text="@string/save" 
		android:layout_centerInParent="true"
		android:layout_width="250px" 
		android:layout_height="wrap_content" 
		android:layout_below="@+id/btn_file_Load"
		android:layout_marginBottom="10dip">
</Button>

<Button android:id="@+id/btn_file_Cancel" 
		android:text="@string/cancel" 
		android:layout_centerInParent="true"
		android:layout_width="250px" 
		android:layout_height="wrap_content" 
		android:layout_below="@+id/btn_file_Save">
</Button>

</RelativeLayout>